fix letter-spacing

--- a/src/components/Content/HobbyStyle.css
+++ b/src/components/Content/HobbyStyle.css
@@ -7,7 +7,7 @@
   color: white;
   font-size: 2.3rem;
   font-family: "Gentium Basic", sans-serif;
-  letter-spacing: 0.3rem;
+  letter-spacing: 1px;
   text-align: center;
   margin: 0 0 2rem 0;
   padding: 1.2rem 0 1.2rem 0;
